--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,12 +16,12 @@ spec:
     spec:
       containers:
         - name: vrf-container
-          image: vrf
+          image: madssr/vrf
           ports:
-            - containerPort: 80
-          resources:
-            limits:
-              nvidia.com/gpu: 1 # Specify GPU resources for this container
+            - containerPort: 8080
+          # resources:
+          #   limits:
+          #     nvidia.com/gpu: 1 # Specify GPU resources for this container
           volumeMounts:
             - name: app-volume
               mountPath: /app
@@ -42,6 +42,7 @@ spec:
     app: vrf
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: LoadBalancer # This exposes your app externally
+      port: 8080
+      targetPort: 8080
+      nodePort: 8080
+  type: NodePort # This exposes your app externally
