Add GitHub Actions

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,7 +16,8 @@ spec:
     spec:
       containers:
         - name: vrf-container
-          image: madssr/vrf
+          image: vrf:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           # resources:
