--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,25 +18,16 @@ jobs:
           docker system prune -af
           docker volume prune -f
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build image
+      - name: Build Docker image
         run: |
           docker build -t vrf:latest .
-
-      - name: Save image as TAR file
-        run: |
-          docker save vrf:latest -o vrf.tar
 
       - name: Load image into K3s cluster
         env:
           KUBECONFIG: ${{ secrets.KUBECONFIG }}
         run: |
-          # Configure kubeconfig
           echo "$KUBECONFIG" > ~/.kube/config
-          # Load the image into Kubernetes
-          ctr -n k8s.io images import vrf.tar
+          ctr -n k8s.io images import $(docker save vrf:latest | docker load)
 
       - name: Deploy application to K3s
         run: |
