--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
         - name: vrf-container
-          image: vrf:latest
-          imagePullPolicy: IfNotPresent
+          image: ghcr.io/p7-vcra/vessel-route-forecasting/vrf:latest
+          # imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
           # resources:
