--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to K3s Using GHCR
+name: Deploy to K3s
 
 on:
   push:
@@ -17,18 +17,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up QHCR Authentication
+      - name: Set up GHCR Authentication
         env:
           CR_PAT: ${{ secrets.GITHUB_TOKEN }}
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
-      # - name: Build Docker image
-      #   run: |
-      #     docker build -t ghcr.io/${{ github.repository }}/vrf:latest .
-
-      # - name: Push Docker image to GHCR
-      #   run: |
-      #     docker push ghcr.io/${{ github.repository }}/vrf:latest
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
