--- a/deploy.yaml
+++ b/deploy.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: vrf
     spec:
+      strategy:
+        type: Recreate
       containers:
         - name: vrf-container
           image: ghcr.io/p7-vcra/vessel-route-forecasting/vrf:latest
