--- a/deploy.yaml
+++ b/deploy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: vrf
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: vrf
@@ -17,23 +17,24 @@ spec:
       containers:
         - name: vrf-container
           image: ghcr.io/p7-vcra/vessel-route-forecasting/vrf:latest
+          # image: vrf:test
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
           # resources:
           #   limits:
           #     nvidia.com/gpu: 1 # Specify GPU resources for this container
-          volumeMounts:
-            - name: app-volume
-              mountPath: /app
+          # volumeMounts:
+          #   - name: app-volume
+          #     mountPath: /app
           command: ['python', 'src/app.py', '--port', '8080']
-      volumes:
-        - name: app-volume
-          hostPath:
-            path: /home/ubuntu/vcra/vessel-route-forecasting
-            type: Directory
+      # volumes:
+      #   - name: app-volume
+      #     hostPath:
+      #       path: /home/ubuntu/vcra/vessel-route-forecasting
+      #       type: Directory
       imagePullSecrets:
-        - name: ghcr-secret-2
+        - name: ghcr-secret
 
 ---
 apiVersion: v1
