--- a/deploy.yaml
+++ b/deploy.yaml
@@ -17,22 +17,10 @@ spec:
       containers:
         - name: vrf-container
           image: ghcr.io/p7-vcra/vessel-route-forecasting/vrf:latest
-          # image: vrf:test
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
-          # resources:
-          #   limits:
-          #     nvidia.com/gpu: 1 # Specify GPU resources for this container
-          # volumeMounts:
-          #   - name: app-volume
-          #     mountPath: /app
           command: ['python', 'src/app.py', '--port', '8080']
-      # volumes:
-      #   - name: app-volume
-      #     hostPath:
-      #       path: /home/ubuntu/vcra/vessel-route-forecasting
-      #       type: Directory
       imagePullSecrets:
         - name: ghcr-secret
 
@@ -48,5 +36,4 @@ spec:
     - protocol: TCP
       port: 8080
       targetPort: 8080
-      nodePort: 30000
-  type: NodePort # This exposes your app externally
+  type: LoadBalancer
