maybe good maybe not

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,13 +25,15 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
 
-      - name: Fetch model
+      - name: Fetch model and norm params
         env:
           MODEL_DIR: data/model
           MODEL_NAME: model.keras
+          NORM_PARAMS_NAME: norm_params.json
         run: |
           mkdir -p ${{ env.MODEL_DIR }}
           scp -i ~/.ssh/id_rsa ubuntu@${{ secrets.HOST }}:/home/ubuntu/vcra/vrf/${{ env.MODEL_DIR }}/${{ env.MODEL_NAME }} ${{ env.MODEL_DIR }}
+          scp -i ~/.ssh/id_rsa ubuntu@${{ secrets.HOST }}:/home/ubuntu/vcra/vrf/${{ env.MODEL_DIR }}/${{ env.NORM_PARAMS_NAME }} ${{ env.MODEL_DIR }}
 
       - name: Set up Python
         uses: actions/setup-python@v3
