--- a/deploy.yaml
+++ b/deploy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: vrf
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: vrf
@@ -29,6 +29,13 @@ spec:
               value: /app/data/model/model.keras
             - name: NORM_PARAMS_PATH
               value: /app/data/model/norm_params.json
+          resources:
+            requests:
+              cpu: '100m'
+              memory: 1Gi
+            limits:
+              cpu: '500m'
+              memory: 2Gi
       volumes:
         - name: vrf-volume
           hostPath:
@@ -49,3 +56,23 @@ spec:
       port: 8080
       targetPort: 8080
   type: LoadBalancer
+
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: vrf-hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: vrf
+  minReplicas: 1
+  maxReplicas: 10
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 80
