--- a/deploy.yaml
+++ b/deploy.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: vrf
     spec:
+      terminationGracePeriodSeconds: 30
       containers:
         - name: vrf-container
           image: ghcr.io/p7-vcra/vessel-route-forecasting/vrf:latest
@@ -31,11 +32,29 @@ spec:
               value: /app/data/model/norm_params.json
           resources:
             requests:
-              cpu: '100m'
+              cpu: '200m'
               memory: 1Gi
             limits:
               cpu: '500m'
               memory: 2Gi
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          startupProbe:
+            httpGet:
+              path: /
+              port: 8080
+            failureThreshold: 30
+            periodSeconds: 5
       volumes:
         - name: vrf-volume
           hostPath:
@@ -48,6 +67,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vrf-service
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '300'
 spec:
   selector:
     app: vrf
